FIXING HISTORY EMPLOYEE

--- a/src/Component/form.css
+++ b/src/Component/form.css
@@ -1,3 +1,19 @@
 .text-label{
     font-size: 12px;
 }
+
+.accordion-button {
+    position: relative;
+    display: block;
+    align-items: center;
+    width: 100%;
+    padding: var(--bs-accordion-btn-padding-y) var(--bs-accordion-btn-padding-x);
+    font-size: 1rem;
+    color: var(--bs-accordion-btn-color);
+    text-align: left;
+    background-color: var(--bs-accordion-btn-bg);
+    border: 0;
+    border-radius: 0;
+    overflow-anchor: none;
+    transition: var(--bs-accordion-transition);
+}
